--- a/css/frontend1a9b.css
+++ b/css/frontend1a9b.css
@@ -9378,14 +9378,10 @@ img {
 
 .img-fit-ratio-banner {
   position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 40%;
+  padding-bottom: 50%;
 }
 .img-fit-ratio-banner img {
   position: absolute;
-  width: 100% !important;
-  -o-object-fit: contain;
   object-fit: contain;
 }
 
@@ -19581,6 +19577,7 @@ select.selectpicker {
 [dir="rtl"] .slick-slide {
   float: right;
 }
+
 .slick-slide img {
   display: block;
 }
@@ -19924,8 +19921,8 @@ select.selectpicker {
   filter: grayscale(1);
 }
 .image-warp img {
-    width: 80%;
-    height: 100%; 
+    width: 50%;
+    height: 70%; 
     object-fit: contain;
 }
 .homepage .out-client .group-logo .logo-slide-item .image-warp:hover {
@@ -20751,7 +20748,7 @@ br[type="lg"] {
   top: 0;
   left: 0;
   padding: 50px 0 0;
-  background-color: #ed1d24;
+  background-color: #fff;
   color: #1b1b1b;
 }
 .header-menu .menu-wrap .menu .copyright {
